[gd_scene load_steps=5 format=3 uid="uid://muk1vwbhumq"]

[ext_resource type="Theme" uid="uid://cxpf3sw54u5q5" path="res://Assets/MenuTheme/menu_theme.tres" id="1_pllfo"]
[ext_resource type="Script" path="res://Scripts/MenuButtons/main_menu_buttons.gd" id="1_vl5m8"]
[ext_resource type="PackedScene" uid="uid://ccg1sypslu0bg" path="res://Scenes/Player.tscn" id="3_37u2u"]
[ext_resource type="Script" path="res://Scripts/menu_sprite.gd" id="4_ahgip"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pllfo")
script = ExtResource("1_vl5m8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="Player" parent="." instance=ExtResource("3_37u2u")]
position = Vector2(575, 200)
scale = Vector2(5, 5)
script = ExtResource("4_ahgip")

[node name="MovementComponent" parent="Player" index="3"]
disabled = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="Player"]
